# clonebot

./: .env.example  .gitignore  README.md  pyproject.toml  sample_chats.txt  sample_chats_marco.txt
Marco/: 1000 - Penso che questo mondo sia un posto di merda v1.1.docx  2000 - Il Sacrificio della patria nostra è consumato 1.1.docx  3000 - Andrea 1.0.docx  3500 - Venne l’epoca dell’Epica.docx  4000 - Don renzo.docx  4500 - Teodorico piangeva.docx  5000 - Tommy fece un gran rumore ma nessuno di noi lo sentì.docx  style.md
clonebot/: __init__.py  cli.py
clonebot/avatar/: __init__.py
clonebot/config/: settings.py
clonebot/core/: clone.py  session.py
clonebot/llm/: anthropic_provider.py  ollama_provider.py  openai_provider.py  provider.py
clonebot/media/: transcribe.py  video.py  vision.py
clonebot/memory/: chunker.py  embeddings.py  ingest.py  store.py  validate.py
clonebot/prompts/: loader.py  system.md
clonebot/prompts/partials/: domain_closed.md  domain_open.md  style_guide.md
clonebot/rag/: prompt.py  retriever.py
clonebot/style/: __init__.py
clonebot/voice/: __init__.py
lessico/: Lessico.proposal.txt  struttura.rtf
